--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,24 @@
 node_modules/
+
+# dependencies
+node_modules/
+.pnp
+.pnp.js
+
+# testing
+coverage
+
+# production
+build
+.next
+out
+
+# misc
+.DS_Store
+*.pem
+
+# env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
